--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="c_111111">#111111</color>
+    <color name="c_333333">#333333</color>
+    <color name="c_408BC0">#408BC0</color>
+    <color name="c_424546">#424546</color>
+    <color name="c_53C24C">#53C24C</color>
+    <color name="c_599AC8">#599AC8</color>
+    <color name="c_666666">#666666</color>
+    <color name="c_999999">#999999</color>
 </resources>
