--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,12 +57,37 @@
             android:text="@string/custom_config"/>
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/ed_phone_num"
+            android:id="@+id/ed_sms_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:layout_marginHorizontal="16dp"
             android:inputType="number"
+            android:maxLength="1"
+            android:maxLines="1"
+            android:hint="发送类型"
+            android:textColor="@color/c_111111"
+            android:textColorHint="@color/c_999999"/>
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/ed_sms_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:layout_marginHorizontal="16dp"
+            android:inputType="number"
+            android:maxLength="13"
+            android:maxLines="1"
+            android:hint="13位时间戳 不填默认为当前时间"
+            android:textColor="@color/c_111111"
+            android:textColorHint="@color/c_999999"/>
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/ed_phone_num"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:layout_marginHorizontal="16dp"
+            android:inputType="text"
             android:maxLines="1"
             android:hint="自定义短信号码(不填用默认)"
             android:textColor="@color/c_111111"
